fix(search): SearchService의 메소드에 반환값 타입 지정 및 AutoService.ts에 ; 제거
SearchService의 메소드에 반환값 전부 명시 (Promise<XXX>) 및 AutoService 마지막에 ; 제거
